Table preview renderer now also renders section outside the table of the same markup (annotations, other stuff above/below table). Cleaned up.